<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.8</version>
        <relativePath/>
    </parent>

    <groupId>com.example.smartassistant</groupId>
    <artifactId>SmartAssistant</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Smart Assistant - 智能助手</name>
    <description>Smart Assistant (智能助手) - 基于 Spring AI Alibaba 的智能代理系统</description>

    <modules>
        <module>smart-assistant-common</module>  <!-- ⭐ 公共模块 -->
        <module>smart-assistant-embedding-service</module>  <!-- ⭐ 独立嵌入服务 -->
        <module>smart-assistant-consumer</module>
        <module>smart-assistant-router</module>
        <module>smart-assistant-order</module>
        <module>smart-assistant-product</module>
        <module>smart-assistant-general</module>  <!-- ⭐ 通用对话模块 -->
        <module>smart-assistant-gateway</module>
        <module>smart-assistant-user</module>  <!-- ⭐ 用户服务 -->
        <module>smart-assistant-recommend</module>  <!-- ⭐ P3 推荐服务 -->
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-ai.version>2.0.0</spring-ai.version>
        <spring-cloud-alibaba.version>2023.0.3.2</spring-cloud-alibaba.version>
        <spring-cloud.version>2024.0.0</spring-cloud.version>
        <!-- ⭐ 强制使用 Nacos 3.x 客户端以支持 A2A -->
        <nacos-client.version>3.2.0</nacos-client.version>
        <!-- JetBrains Annotations — 原由 spring-ai-alibaba 传递引入 -->
        <jetbrains-annotations.version>26.0.2</jetbrains-annotations.version>
        <!-- ⭐ JDK Windows 长类路径修复（Surefire 长 classpath bug，JDK 21 下仍保留该系统属性，无害） -->
        <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
        <!-- ⭐ 统一管理的第三方依赖版本 -->
        <mybatis-plus.version>3.5.9</mybatis-plus.version>
        <jjwt.version>0.12.5</jjwt.version>
        <resilience4j.version>2.2.0</resilience4j.version>
        <xchart.version>3.8.8</xchart.version>
        <caffeine.version>3.1.8</caffeine.version>
        <spring-cloud-bootstrap.version>4.1.0</spring-cloud-bootstrap.version>
        <exp4j.version>0.4.8</exp4j.version>
        <ik-analyzer.version>8.4.0</ik-analyzer.version>
        <jsqlparser.version>4.9</jsqlparser.version>
        <mybatis-spring.version>3.0.3</mybatis-spring.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- ⭐ 强制使用 Nacos 3.x 客户端以支持 A2A -->
            <dependency>
                <groupId>com.alibaba.nacos</groupId>
                <artifactId>nacos-client</artifactId>
                <version>${nacos-client.version}</version>
            </dependency>
            
            <!-- Spring Cloud Alibaba BOM -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- ⭐ MyBatis Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- ⭐ MyBatis Spring Boot Starter -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>

            <!-- ⭐ JWT (jjwt) -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- ⭐ Resilience4j -->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot3</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-micrometer</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>

            <!-- ⭐ XChart -->
            <dependency>
                <groupId>org.knowm.xchart</groupId>
                <artifactId>xchart</artifactId>
                <version>${xchart.version}</version>
            </dependency>

            <!-- ⭐ Caffeine -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- ⭐ JetBrains Annotations -->
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jetbrains-annotations.version}</version>
            </dependency>

            <!-- ⭐ Spring Cloud Bootstrap -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-bootstrap</artifactId>
                <version>${spring-cloud-bootstrap.version}</version>
            </dependency>

            <!-- ⭐ exp4j -->
            <dependency>
                <groupId>net.objecthunter</groupId>
                <artifactId>exp4j</artifactId>
                <version>${exp4j.version}</version>
            </dependency>

            <!-- ⭐ IKAnalyzer -->
            <dependency>
                <groupId>com.github.magese</groupId>
                <artifactId>ik-analyzer</artifactId>
                <version>${ik-analyzer.version}</version>
            </dependency>

            <!-- ⭐ jsqlparser -->
            <dependency>
                <groupId>com.github.jsqlparser</groupId>
                <artifactId>jsqlparser</artifactId>
                <version>${jsqlparser.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Spring AI 快照仓库（DeepSeek 等最新模型需要） -->
    <repositories>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <!-- JitPack - 从 GitHub 构建 HanLP -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <!-- ⭐ Lombok annotation processor (所有子模块共享) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
